Bug 121833. Fix assertion (and optimize) string-fu in rdf_MakeRelativeRef. Remove unused rdf_MakeRelativeName. r=timeless, sr=shaver.